# test_engry

./: .gitignore  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml
backend/app/: asgi.py  models.py  settings.py  urls.py  wsgi.py
backend/static/engry/css/: home.css
backend/templates/: home.html  popup.html
backend/tg_auth/: apps.py  models.py  serializers.py  services.py  views.py
backend/tg_auth/migrations/: 0001_initial.py
telegram_bot/: dto.py  main.py  settings.py
